test/type/pass/negation.j
class A { Void main(){return;} }
class B {
  Int a(Int b) {
    return -5 - b + (-5);
  }
}
