test/type/fail/while_non_bool.j
class A{
  Void main() {
    while (0) {return;}
    return;
  }
}
